--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
        </head>
        <body>
        <h1>Odin Recipes</h1>
+         <a href="https://www.allrecipes.com/recipe/32649/margaritas/>Margarita</a>
